feat: adiciona tratamento para execução de threads virtuais